# todos

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pr_check.yml  release.yml
src/: main.rs  models.rs
src/models/: todo.rs  todo_type.rs
test/: ok.js  test.scss  test.vue  text.js
test/subdirectory/: osso-notes.js  test.html  test.md
