[package]
name = "todos"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version =  "4.2.3", features = ["derive"] }
colored = "2.0.0"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
jwalk = "0.8.1"
nom = "7.1.3"
